--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -31,11 +31,15 @@ dependencies:
   flutter_blue: ^0.8.0
   flutter:
     sdk: flutter
-
+  image_picker: ^0.8.4+4 # Check for the latest version on pub.dev
+  permission_handler: ^10.0.0 # Check for the latest version on pub.dev
+  path_provider: ^2.0.2 # Check for the latest version on pub.dev
+  flutter_riverpod: ^2.4.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image: ^4.1.6
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +51,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,9 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
