--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission_handler: ^10.0.0 # Check for the latest version on pub.dev
   path_provider: ^2.0.2 # Check for the latest version on pub.dev
   flutter_riverpod: ^2.4.10
+  audioplayers: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/audio/
     - assets/images/
 
 
