--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter_blue: ^0.8.0
+  flutter_blue_plus: ^1.31.15
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+4 # Check for the latest version on pub.dev
