--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.6.7
   equatable: ^2.0.5
   flutter_bloc: ^8.1.4
+  table_calendar: ^3.1.0
   dio: ^5.4.0
 
   # The following adds the Cupertino Icons font to your application.
