--- a/rehab_flutter/ios/Runner/GoogleService-Info.plist
+++ b/rehab_flutter/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>145561982761-r2montjc4ut8gaq7cra67b25if6s1ete.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.145561982761-r2montjc4ut8gaq7cra67b25if6s1ete</string>
 	<key>API_KEY</key>
 	<string>AIzaSyD2Pac3DgD9o5bvIevDIMAKWtOQIkl0DU8</string>
 	<key>GCM_SENDER_ID</key>
