--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image: ^4.1.6
   firebase_core: ^2.24.2
   firebase_auth: ^4.17.7
+  cloud_firestore: ^4.15.9
 
 dev_dependencies:
   flutter_test:
