--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_auth: ^4.17.7
   cloud_firestore: ^4.15.8
   smooth_page_indicator: ^1.1.0
+  glassmorphism_ui: ^0.3.0
 
 dev_dependencies:
   flutter_test:
