--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   cloud_firestore: ^4.15.8
   smooth_page_indicator: ^1.1.0
   glassmorphism_ui: ^0.3.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
