--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter_blue_plus: ^1.31.15
   flutter:
     sdk: flutter
-  image_picker: ^0.8.4+4 # Check for the latest version on pub.dev
+  image_picker: ^1.0.7
   permission_handler: ^10.0.0 # Check for the latest version on pub.dev
   path_provider: ^2.0.2 # Check for the latest version on pub.dev
   flutter_riverpod: ^2.4.10
