--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   marquee: ^2.2.3
   percent_indicator: ^4.2.3
+  firebase_storage: ^11.6.9
+  firebase_app_check: ^0.2.1+17
 
 dev_dependencies:
   flutter_test:
