--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   firebase_app_check: ^0.2.1+17
   mobile_scanner: ^4.0.1
   pretty_qr_code: ^3.3.0
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
