--- a/rehab_flutter/pubspec.yaml
+++ b/rehab_flutter/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   mobile_scanner: ^4.0.1
   pretty_qr_code: ^3.3.0
   cached_network_image: ^3.3.1
-
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +92,7 @@ flutter:
     - assets/images/image_texture/images/
     - assets/images/image_texture/textures/
     - assets/data/
+    - assets/lotties/
     # - assets/data/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
