changed icon and app name

--- a/rehab_flutter/ios/Runner/Info.plist
+++ b/rehab_flutter/ios/Runner/Info.plist
@@ -29,7 +29,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>rehab_flutter</string>
+	<string>CuTouch</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
